# RustAndroid

./: Cargo.toml  README.md  run.sh
src/: main.rs  matrix.rs
